fixed footer spacing

--- a/src/index.css
+++ b/src/index.css
@@ -432,7 +432,7 @@ textarea {
 #footer {
   display: flex;
   justify-content: center;
-  /* gap: 20rem; */
+  gap: 20rem;
   transform: translateY(30rem);
   text-align: left;
   background: var(--gra-a);
@@ -480,7 +480,7 @@ textarea {
   }
 
   .products2Container img {
-    width: 14rem;
+    /* width: 14rem; */
   }
 
   .products2Content {
@@ -617,6 +617,10 @@ textarea {
 
   .supportContainer {
     display: flex;
+  }
+
+  #footer {
+    gap: 5rem;
   }
 
 
